--- a/style.css
+++ b/style.css
@@ -41,16 +41,19 @@ h1{
     background-color: rgb(35, 13, 76);
 }
 
+
 .upperbox{
     display: flex; 
     flex-direction: row;
     gap: 2px;
 }
 
+/*The side-buttons*/
+
 .buttoncontainer{
     display: flex;
     flex-direction: column;
-    gap: 250px;
+    gap: 220px;
     align-items: center;
     height: 560px;
     width: 200px;
@@ -75,7 +78,7 @@ h1{
     display: flex;
     flex-direction: column;
     margin-top: 10px;
-    gap: 15px;
+    gap: 25px;
 }
 
 .colors button:hover{
@@ -106,70 +109,59 @@ h1{
     0 0 25px red;
 }
 
+/*The actual sketch-pad*/
+
 #gridcontainer{
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto 
-    auto auto auto auto auto auto auto auto auto auto;
     height: 560px;
     width: 560px;
     border: 1px solid rgb(35, 13, 76);
     background-color: white;
 }
 
-#gridcontainer > div{
-    border: none;
-    height: 35px;
-    width: 35px;
-}
+/*The size-choices*/
 
 .lowerbox{
     display: flex;
 }
 
-.slidercontainer{
+.sizescontainer{
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 63px;
+    width: 100%;
+    height: 130px;
+}
+
+.sizescontainer button{
+    width: 110px;
     padding: 10px;
-    margin-top: 30px;
-    width: 100%;
-    background-color: rgb(35, 13, 76);
-}
-
-#slider{
-    -webkit-appearance: none;
-    width: 100%;
-    height: 7px;
-    outline: 1px rgba(255, 255, 255, 0.454) solid;;
-    background-color:rgb(14, 13, 53);
+    font-family: "Megrim";
+    font-size: 1rem;
+    color: white;
+    background-color: rgb(22, 8, 48);
+    border: none;
     border-radius: 5px;
+    transition: ease-in-out 0.3s;
 }
 
-#slider::-webkit-slider-thumb{
-    -webkit-appearance: none;
-    width: 17px;
-    height: 17px;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid white;
-    border-radius: 8px;
-    transition: 0.2s ease-in-out;
-}
-
-#slider::-webkit-slider-thumb:hover{
-    box-shadow:
-    0 0 10px rgba(255, 255, 255, 0.727),
+.sizescontainer button:hover{
+    box-shadow: 
+    0 0 10px rgba(255, 255, 255, 0.648),
     0 0 15px rgb(0, 255, 187),
     0 0 20px rgb(0, 255, 187),
-    0 0 25px rgb(0, 255, 187); 
+    0 0 25px rgb(0, 255, 187);
+    
+    text-shadow:
+    0 0 10px rgba(255, 255, 255, 0.648),
+    0 0 15px rgb(0, 255, 187),
+    0 0 20px rgb(0, 255, 187),
+    0 0 25px rgb(0, 255, 187);
 }
 
-#amount{
-    color: white;
-    font-family: "Megrim";
-    font-size: 1.6rem;
-    margin-top: 10px;
-    margin-bottom: -10px;
-}
+
+
 
 
 
